@@ -2,11 +2,13 @@ package org.example.shoppingweb.security;
 
 import org.example.shoppingweb.entity.User;
 import org.springframework.security.core.GrantedAuthority;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 import org.springframework.security.oauth2.core.user.OAuth2User;
 
 import java.util.Collection;
 import java.util.Collections;
+import java.util.List;
 import java.util.Map;
 
 public class CustomUserDetails implements UserDetails, OAuth2User {
@@ -28,8 +30,12 @@ public class CustomUserDetails implements UserDetails, OAuth2User {
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return Collections.emptyList(); // sửa nếu cần phân quyền
+        if (user.getRole() == null || user.getRole().getRoleName() == null || user.getRole().getRoleName().isBlank()) {
+            throw new IllegalStateException("User has no role assigned");
+        }
+        return List.of(new SimpleGrantedAuthority(user.getRole().getRoleName()));
     }
+
 
     @Override
     public String getPassword() {
